--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     },
     "devDependencies": {
         "@babel/cli": "^7.10.3",
-        "@babel/core": "^7.10.3",
+        "@babel/core": "7.11.6",
         "@babel/plugin-proposal-class-properties": "^7.10.1",
         "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
         "@babel/preset-env": "^7.10.3",
@@ -48,7 +48,7 @@
         "@storybook/addon-actions": "^3.3.15",
         "@storybook/addon-links": "^3.3.15",
         "@storybook/addons": "^3.3.15",
-        "@storybook/react": "^7.0.4",
+        "@storybook/react": "^3.4.12",
         "@types/d3": "^7.4.0",
         "@types/d3-axis": "^1.0.10",
         "@types/d3-fetch": "^3.0.1",
@@ -76,7 +76,7 @@
         "array-smooth": "^1.0.0",
         "axios": "^0.21.1",
         "babel-cli": "^6.26.0",
-        "babel-loader": "^8.1.0",
+        "babel-loader": "8.1.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "circos": "^2.1.0",
@@ -116,7 +116,7 @@
         "point-in-polygon": "^1.0.1",
         "polygon-lookup": "^2.6.0",
         "promise-worker": "^1.1.1",
-        "prop-types": "^15.6.0",
+        "prop-types": "^15.7.2",
         "qrcode.react": "^3.0.2",
         "query-string": "^6.13.1",
         "rc-drawer": "^4.2.2",
@@ -142,7 +142,7 @@
         "react-redux-firebase": "^2.5.1",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "3.4.3",
         "react-select": "^4.3.1",
         "react-sortable-hoc": "^1.11.0",
         "react-speech-recognition": "^2.0.4",
@@ -155,7 +155,7 @@
         "script-loader": "^0.7.2",
         "shortid": "^2.2.15",
         "styled-components": "^5.3.3",
-        "tcp-port-used": "^1.0.2",
+        "tcp-port-used": "^0.1.2",
         "text-encoding": "^0.7.0",
         "three": "^0.137.0",
         "typescript": "^3.4.5",
