--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     },
     "peerDependencies": {
         "prop-types": "^15.6.0",
-        "react": "^16.3.0",
-        "react-dom": "^16.3.0"
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.3",
@@ -48,7 +48,7 @@
         "@storybook/addon-actions": "^3.3.15",
         "@storybook/addon-links": "^3.3.15",
         "@storybook/addons": "^3.3.15",
-        "@storybook/react": "^3.4.12",
+        "@storybook/react": "^4.0.0",
         "@types/d3": "^7.4.0",
         "@types/d3-axis": "^1.0.10",
         "@types/d3-fetch": "^3.0.1",
@@ -61,9 +61,9 @@
         "@types/memoize-one": "^3.1.1",
         "@types/node": "^10.17.26",
         "@types/query-string": "^6.1.0",
-        "@types/react": "^16.9.38",
+        "@types/react": "^17.0.0",
         "@types/react-detect-offline": "^2.4.1",
-        "@types/react-dom": "^16.9.8",
+        "@types/react-dom": "^17.0.0",
         "@types/react-hammerjs": "^1.0.2",
         "@types/react-modal": "^3.13.1",
         "@types/react-notify-toast": "^0.5.1",
@@ -88,10 +88,9 @@
         "d3-fetch": "^3.0.1",
         "d3-selection": "^3.0.0",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
         "eslint-plugin-prettier": "^3.1.4",
         "firebase": "^7.15.4",
-        "flexlayout-react": "^0.3.11",
+        "flexlayout-react": "^0.5.4",
         "fuse.js": "^3.6.1",
         "g3djs": "^2.0.1",
         "generic-filehandle": "^2.2.1",
@@ -120,36 +119,34 @@
         "qrcode.react": "^3.0.2",
         "query-string": "^6.13.1",
         "rc-drawer": "^4.2.2",
-        "react": "^16.13.1",
+        "react": "^17.0.1",
         "react-app-rewired": "^2.2.1",
         "react-autosuggest": "^10.0.2",
         "react-beautiful-dnd": "^13.1.0",
         "react-bootstrap-tabs": "^2.0.0",
-        "react-collapsible": "^2.8.0",
+        "react-collapsible": "^2.8.3",
         "react-color": "^2.19.3",
-        "react-compound-slider": "^0.20.1",
+        "react-compound-slider": "^3.0.0",
         "react-cookie-consent": "^7.2.1",
-        "react-copy-to-clipboard": "^5.0.2",
+        "react-copy-to-clipboard": "^5.0.3",
         "react-detect-offline": "^2.4.5",
-        "react-dom": "^16.13.1",
-        "react-hammerjs": "^1.0.1",
+        "react-dom": "^17.0.1",
         "react-hot-keys": "^1.2.2",
-        "react-modal": "^3.11.2",
-        "react-notify-toast": "^0.5.1",
-        "react-popper": "^0.8.2",
+        "react-modal": "^3.12.1",
+        "react-popper": "^1.3.9",
         "react-radio-group": "^3.0.3",
-        "react-redux": "^5.1.2",
-        "react-redux-firebase": "^2.5.1",
+        "react-redux": "^7.2.2",
+        "react-redux-firebase": "^3.8.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
+        "react-scripts": "^4.0.0",
         "react-select": "^4.3.1",
-        "react-sortable-hoc": "^1.11.0",
+        "react-sortable-hoc": "^2.0.0",
         "react-speech-recognition": "^2.0.4",
         "react-swipeable-views": "^0.14.0",
         "react-switch": "^7.0.0",
-        "react-table": "^6.11.5",
-        "react-test-renderer": "^16.13.1",
+        "react-table": "^7.6.2",
+        "react-test-renderer": "^17.0.1",
         "reactcss": "^1.2.3",
         "redux-undo": "^1.0.1",
         "script-loader": "^0.7.2",
