--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,6 +72,7 @@
         "@types/shortid": "0.0.29",
         "@types/text-encoding": "0.0.35",
         "@types/uuid": "^3.4.9",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
         "array-move": "^2.2.2",
         "array-smooth": "^1.0.0",
         "axios": "^0.21.1",
