--- a/frontend/package.json
+++ b/frontend/package.json
@@ -132,8 +132,10 @@
         "react-copy-to-clipboard": "^5.0.3",
         "react-detect-offline": "^2.4.5",
         "react-dom": "^17.0.1",
+        "react-hammerjs": "^1.0.1",
         "react-hot-keys": "^1.2.2",
         "react-modal": "^3.12.1",
+        "react-notify-toast": "^0.5.1",
         "react-popper": "^1.3.9",
         "react-radio-group": "^3.0.3",
         "react-redux": "^7.2.2",
